[package]
authors = ["DerFetzer <kontakt@der-fetzer.de>"]
edition = "2018"
readme = "README.md"
name = "stm32-ccs811"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.3"
panic-semihosting = "0.5.3"
embedded-ccs811 = "0.1.0"
embedded-hal = "0.2.4"
asm-delay = "0.7.2"
heapless = { version = "0.5.5", features = ["ufmt-impl"] }
usb-device = "0.2.5"
usbd-serial = "0.1.0"
stm32-usbd = { version = "0.5.1", features = ["ram_access_1x16"] }
ufmt = "0.1.0"

[dependencies.cortex-m]
version = "0.6.2"
# "inline-asm" optimizes away AsmDelay in release mode
#features = ["inline-asm", "const-fn"]
features = ["const-fn"]

[dependencies.stm32f1xx-hal]
version = "0.6.1"
features = ["stm32f103", "medium", "rt", "stm32-usbd"]

[dependencies.stm32f1]
version = "0.11.0"
features = ["stm32f103", "rt"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-ccs811"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
