[package]
authors = ["DerFetzer <kontakt@der-fetzer.de>"]
edition = "2018"
readme = "README.md"
name = "stm32-ccs811"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.9"
panic-semihosting = "0.5.6"
embedded-ccs811 = "0.2.0"
embedded-hal = "0.2.6"
asm-delay = "0.9.0"
heapless = { version = "0.7.8", features = ["ufmt-impl"] }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
stm32-usbd = { version = "0.6.0" }
ufmt = "0.1.0"

[dependencies.cortex-m]
version = "0.6.2"
# "inline-asm" optimizes away AsmDelay in release mode
#features = ["inline-asm", "const-fn"]
features = ["const-fn"]

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["stm32f103", "medium", "rt", "stm32-usbd"]

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-ccs811"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
